--- a/src/pages/SearchPage.module.css
+++ b/src/pages/SearchPage.module.css
@@ -395,6 +395,7 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: min-content;
     gap: 20px;
+    padding: 6px 6px 12px;
     transition: grid-template-columns 0.5s ease-in-out;
 }
 
